--- a/index.htm
+++ b/index.htm
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>new app</title>
+    <title>To Do App</title>
 </head>
 
 <body>
     <center>
         <div class="heading">
-            <h1>Srijan's Magic Note Taking App</h1>
+            <h1>Srijan's Note Taking App</h1>
             <h5>Using Vanilla JS</h5>
         </div>
     </center>
